--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
-APP_NAME=Laravel
+APP_NAME="Zenora Up"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://zenora-up.test
+APP_TIMEZONE=America/Sao_Paulo
 
-APP_LOCALE=en
+APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -25,9 +26,9 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=zenora_up
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456789
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -37,7 +38,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=file
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
