--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=zenora_up
 DB_USERNAME=root
-DB_PASSWORD=123456789
+DB_PASSWORD=
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
